# fastapi_app

./: README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 3db866d841b0_.py  3ff9cfdb8d26_first_change_in_users_table.py
api/routers/: courses.py  sections.py  users.py
api/utils/: users.py
db/: db_setup.py
db/models/: course.py  mixins.py  user.py
