[tool.poetry]
name = "fastapi-app"
version = "0.1.0"
description = "Following the tutorial on YouTube for FastApi"
authors = ["Fahad Usman <fahadshery@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.23.2"
fastapi = "^0.104.0"
pydantic = "^2.4.2"
sqlalchemy = "^2.0.22"
psycopg2-binary = "^2.9.9"
sqlalchemy-utils = "^0.41.1"
alembic = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
